--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/38f15fa596.js" crossorigin="anonymous"></script>
-    <script defer src="/css/indexCSS.js"></script>
+    <script defer src="./css/indexCSS.js"></script>
 </head>
+
 <body>
+  <div id="particles-js">
+  </div>
+  <div>
+    <img class="imagen_fondo "src="../web-MultiD-main/img/fondo logo.png" alt="">
+  </div>
 <header class="header">
   <nav class="nav">
-  <a href="#" class="logo nav-link">Logo</a>
+  <!-- <a href="#" class="logo nav-menu-link">Logo</a> -->
   <button class="nav-boton">
     <i class="fa-solid fa-earth-americas"></i>
   </button>
@@ -27,11 +33,14 @@
     </ul>
   </nav>
 </header>
-<div class="imagen_fondo"></div>
-<div id="particles-js"></div>
+<div class="contenedor-titulo">
+<h1 class="titulo">AGENCIA DIGITAL</h1>
+</div>
+ 
+
 
 <script type="text/javascript" src="./particles/particles.js"></script>
- <script type="text/javascript" src="./particles/app.js"></script>
+<script type="text/javascript" src="./particles/app.js"></script>
 
 
 
@@ -40,7 +49,7 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
