--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div>
     <img class="imagen_fondo "src="../web-MultiD-main/img/fondo logo.png" alt="">
   </div>
-<header class="header">
+  <header class="header">
   <nav class="nav">
   <!-- <a href="#" class="logo nav-menu-link">Logo</a> -->
   <button class="nav-boton">
@@ -33,22 +33,31 @@
     </ul>
   </nav>
 </header>
-<div class="contenedor-titulo">
-<h1 class="titulo">AGENCIA DIGITAL</h1>
-</div>
- 
+<section>
+  <div class="center_line"><p>SERVICIOS</p></div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <script type="text/javascript" src="./particles/particles.js"></script>
 <script type="text/javascript" src="./particles/app.js"></script>
-
-
-
-
-
-
-
-
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
